--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -43,5 +43,9 @@ form {
         display: flex;
         flex-direction: row;
         justify-content: center;
+        transition: color 2s;
+    }
+    .btn-submit:hover {
+        color: $violeta-medio; 
     }
 }
