--- a/css/styles.css
+++ b/css/styles.css
@@ -548,6 +548,7 @@ html .btn-wpp {
   animation-name: moverBoton;
   animation-duration: 3s;
   animation-delay: 0.5s;
+  animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
 html .parallax {
@@ -564,11 +565,41 @@ html .feria-img {
   display: flex;
   justify-content: center;
 }
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  html .feria-img {
+    width: 30%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  html .feria-img {
+    width: 40%;
+  }
+}
+@media screen and (min-width: 1024px) and (orientation: landscape) {
+  html .feria-img {
+    width: 50%;
+  }
+}
 html .donaciones-img {
   width: 50%;
   height: 50%;
   display: flex;
   justify-content: center;
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  html .donaciones-img {
+    width: 30%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  html .donaciones-img {
+    width: 40%;
+  }
+}
+@media screen and (min-width: 1024px) and (orientation: landscape) {
+  html .donaciones-img {
+    width: 50%;
+  }
 }
 html .tipos-talleres {
   display: flex;
