--- a/css/styles.css
+++ b/css/styles.css
@@ -494,29 +494,85 @@ html body section article div {
   padding: auto;
   margin-bottom: auto;
 }
-html ul li {
+html body section .feria-img {
+  width: 50%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  html body section .feria-img {
+    width: 30%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  html body section .feria-img {
+    width: 40%;
+  }
+}
+@media screen and (min-width: 1024px) and (orientation: landscape) {
+  html body section .feria-img {
+    width: 50%;
+  }
+}
+html body section .donaciones-img {
+  width: 50%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  html body section .donaciones-img {
+    width: 30%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  html body section .donaciones-img {
+    width: 40%;
+  }
+}
+@media screen and (min-width: 1024px) and (orientation: landscape) {
+  html body section .donaciones-img {
+    width: 50%;
+  }
+}
+html body section ul li {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
   text-align: center;
+  list-style-type: none;
   font-size: 1rem;
   color: rgb(113, 113, 171);
   padding: 0.5rem;
 }
+html body section ul li .tipos-talleres {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  html ul li {
+  html body section ul li {
     font-size: 1rem;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  html ul li {
+  html body section ul li {
     font-size: 1.3rem;
   }
 }
 @media screen and (min-width: 1024px) and (orientation: landscape) {
-  html ul li {
+  html body section ul li {
     font-size: 1.6rem;
   }
+}
+html body .parallax {
+  background-image: url(../assets/parallax.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 50vh;
 }
 @keyframes moverBoton {
   0% {
@@ -535,7 +591,7 @@ html ul li {
     transform: scale(1, 1);
   }
 }
-html .btn-wpp {
+html body .btn-wpp {
   border-radius: 50%;
   width: 5rem;
   height: 5rem;
@@ -550,59 +606,4 @@ html .btn-wpp {
   animation-delay: 0.5s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-}
-html .parallax {
-  background-image: url(../assets/parallax.jpg);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 50vh;
-}
-html .feria-img {
-  width: 50%;
-  height: 50%;
-  display: flex;
-  justify-content: center;
-}
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  html .feria-img {
-    width: 30%;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  html .feria-img {
-    width: 40%;
-  }
-}
-@media screen and (min-width: 1024px) and (orientation: landscape) {
-  html .feria-img {
-    width: 50%;
-  }
-}
-html .donaciones-img {
-  width: 50%;
-  height: 50%;
-  display: flex;
-  justify-content: center;
-}
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  html .donaciones-img {
-    width: 30%;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  html .donaciones-img {
-    width: 40%;
-  }
-}
-@media screen and (min-width: 1024px) and (orientation: landscape) {
-  html .donaciones-img {
-    width: 50%;
-  }
-}
-html .tipos-talleres {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }/*# sourceMappingURL=styles.css.map */
