--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -226,31 +226,77 @@ html{
                     width: 20%;
                     padding: auto;
                     margin-bottom: auto;
+                }
+            }
+            .feria-img {
+                width: 50%;
+                height: 50%;
+                display: flex;
+                justify-content: center;
+        
+                @include mobile {
+                    width: 30%;
+                }
+                @include tablet {
+                    width: 40%;
+                }
+                @include desktop {
+                    width: 50%;
+                }
+            }
+            .donaciones-img {
+                width: 50%;
+                height: 50%;
+                display: flex;
+                justify-content: center;
+        
+                @include mobile {
+                    width: 30%;
+                }
+                @include tablet {
+                    width: 40%;
+                }
+                @include desktop {
+                    width: 50%;
+                }
+            }
+            ul {
+                li {
+                    font-family: "Poppins", sans-serif;
+                    font-weight: map-get($font-weights, "regular");
+                    font-style: normal;
+                    text-align: center;
+                    list-style-type: none;
+                    font-size: 1rem;
+                    color: $violeta-medio;
+                    padding: 0.5rem;
+    
+                    .tipos-talleres {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                    } 
+    
+                    @include mobile {
+                        font-size: 1rem;
+                    }
+                    @include tablet {
+                        font-size: 1.3rem;
+                    }
+                    @include desktop {
+                        font-size: 1.6rem;
                     }
                 }
             }
         }
-        ul {
-            li {
-                font-family: "Poppins", sans-serif;
-                font-weight: map-get($font-weights, "regular");
-                font-style: normal;
-                text-align: center;
-                font-size: 1rem;
-                color: $violeta-medio;
-                padding: 0.5rem;
-
-                @include mobile {
-                    font-size: 1rem;
-                }
-                @include tablet {
-                    font-size: 1.3rem;
-                }
-                @include desktop {
-                    font-size: 1.6rem;
-                }
-            }
-        }
+        .parallax {
+            background-image: url(../assets/parallax.jpg);
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size:cover;
+            height: 50vh;
+        }  
         @keyframes moverBoton {
             0% {
                 transform: scale(1, 1);
@@ -284,49 +330,5 @@ html{
             animation-timing-function: linear;
             animation-iteration-count: infinite;
         }
-        .parallax {
-                background-image: url(../assets/parallax.jpg);
-                background-attachment: fixed;
-                background-position: center;
-                background-repeat: no-repeat;
-                background-size:cover;
-                height: 50vh;
-        }
-        .feria-img {
-            width: 50%;
-            height: 50%;
-            display: flex;
-            justify-content: center;
-
-            @include mobile {
-                width: 30%;
-            }
-            @include tablet {
-                width: 40%;
-            }
-            @include desktop {
-                width: 50%;
-            }
-        }
-        .donaciones-img {
-            width: 50%;
-            height: 50%;
-            display: flex;
-            justify-content: center;
-
-            @include mobile {
-                width: 30%;
-            }
-            @include tablet {
-                width: 40%;
-            }
-            @include desktop {
-                width: 50%;
-            }
-        }
-        .tipos-talleres {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }  
+    }
 }
